test/mutation_analysis/s0520_detect_capital/hafis/starchat/mutants/10/result.txt
./test/mutation_analysis/s0520_detect_capital/hafis/starchat/mutants/10/Solution.java:25: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
